--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Fontawesome cdn -->
+    <script src="https://kit.fontawesome.com/f0190a24dd.js" crossorigin="anonymous"></script>
+    <!-- Ovo & Muli fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Muli&family=Ovo&display=swap" rel="stylesheet">
+    <!-- Script for TensorFlow icon on project page -->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <title>Joseph | Full Stack Developer Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
